<resources>
    <string name="app_name">L18_GoogleMaps</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_exit">Exit</string>
    <string name="action_mark_list">Marker List</string>
    <string name="tvText">Title</string>
    <string name="tvLongitude">Longitude</string>
    <string name="tvLatitude">Latitude</string>
    <string name="title_activity_markers">MarkersActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_all">Clear All</string>
    <string name="marker_title">Marker Title</string>
    <string name="action_location_info">Location info</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude/longitude used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="info_dialog_title">Location info</string>
    <string name="action_map_type">Map Type</string>
    <string name="action_type_hybrid">Hybrid</string>
    <string name="action_type_map">Satellite</string>
    <string name="action_type_terrain">Terrain</string>
</resources>
