<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_mark_list"
        android:title="@string/action_mark_list"
        android:icon="@drawable/ic_list"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_location_info"
        android:title="@string/action_location_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_map_type"
        android:title="@string/action_map_type"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" >
        <menu>
            <item android:id="@+id/action_type_hybrid"
                android:title="@string/action_type_hybrid"
                android:orderInCategory="50"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/action_type_satellite"
                android:title="@string/action_type_map"
                android:orderInCategory="51"
                app:showAsAction="ifRoom" />
            <item android:id="@+id/action_type_terrain"
                android:title="@string/action_type_terrain"
                android:orderInCategory="52"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

</menu>